# snap-bbce-repeal

./: .gitignore  Makefile  next.config.js  package.json  pyproject.toml  recharts-niceticks.tgz
.github/workflows/: pr.yaml
app/: globals.css  layout.jsx  page.jsx
lib/: getCssVar.js  parseCSV.js
public/: robots.txt  sitemap.xml
public/data/: archetypes.csv  distributional_impact.csv  national_summary.csv  poverty_metrics.csv  state_impact.csv
src/components/: ArchetypeExplorer.jsx  DistributionalChart.jsx  MethodologyNote.jsx  NationalOverview.jsx  PovertyMetrics.jsx  StateMap.jsx  StateTable.jsx
src/snap_bbce_repeal/: __init__.py  cli.py  constants.py  pipeline.py  reform.py  validation.py
src/snap_bbce_repeal/calculators/: __init__.py  archetypes.py  distributional.py  national.py  poverty.py  state.py
tests/: test_reform.py
